esercizio copiato e aggiunto autoplay

--- a/index.html
+++ b/index.html
@@ -1,43 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
 
-        <!-- CSS -->
-        <link rel="stylesheet" href="./css/style.css">
-        
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Carosello</title>
+</head>
 
-
-    <body>
-
-        <!-- INIZIO HEADER -->
-        <header>
-            <div class="container">
-                header
+<body>
+    <div class="carousel-container">
+        <button id="prev">Prev</button>
+        <div class="carousel-slides">
+            <div class="carousel-slide">
+                <img src="img/01.webp" alt="Image 1">
             </div>
-        </header>
-        <!-- FINE HEADER -->
-
-        <!-- INIZIO MAIN -->
-        <main>
-            <div class="container">
-                main
+            <div class="carousel-slide">
+                <img src="img/02.webp" alt="Image 2">
             </div>
-        </main>
-        <!-- FINE MAIN -->
-
-        <!-- INIZIO FOOTER -->
-        <footer>
-            <div class="container">
-                footer
+            <div class="carousel-slide">
+                <img src="img/03.webp" alt="Image 2">
             </div>
-        </footer>
-        <!-- FINE FOOTER -->
+            <div class="carousel-slide">
+                <img src="img/04.webp" alt="Image 2">
+            </div>
+            <div class="carousel-slide">
+                <img src="img/05.webp" alt="Image 2">
+            </div>
+        </div>
+        <button id="next">Next</button>
+    </div>
 
-
-    </body>
+    <!-- JAVASCRIPT -->
+    <script type="text/javascript" src="./js/scripts.js"></script>
+</body>
 
 </html>
